Fix channels scrollbar

--- a/src/modules/ui/_scrollbar.scss
+++ b/src/modules/ui/_scrollbar.scss
@@ -1,5 +1,6 @@
 // Channels, members, settings nav
-.theme-dark .thin__62e51{
+.theme-dark .thin__62e51, // Settings nav
+.theme-dark .thin_b1c063{ // Channels
     &::-webkit-scrollbar{
         width: 6px;
     }
